# debug_adapter

./: .flake8  .gitignore  LICENSE  README.md  cspell.json  poetry.toml  pyproject.toml
.github/workflows/: main.yml
src/: common.py  main.py
src/dap/: dap_message.py  notifier.py  request_handler.py  server.py
src/debug_adapter/: main.py
src/debug_adapter/dap/: notifier.py  request_handler.py  server.py
src/debug_adapter/gdb/: backend.py  breakpoints.py  execution_manager.py  gdb_utils.py  processes.py  stack_trace.py  threads.py  variables.py
src/gdb/: backend.py  breakpoints.py  execution_manager.py  gdb_utils.py  processes.py  stack_trace.py  threads.py  variables.py
tests/big/: conftest.py  debug_scenarios_test.py
tests/big/artifacts/: client.cpp  server.cpp
tests/big/helpers/: dap.py  debug_orchestrator.py
tests/small/: breakpoints_test.py  conftest.py  variables_test.py
